--- a/inventory.ini
+++ b/inventory.ini
@@ -1,17 +1,7 @@
-[dev]
-dev1 ansible_host=3.87.17.205
-dev2 ansible_host=18.207.198.249
+[production]
+prod1 ansible_host=3.87.17.205
+prod2 ansible_host=18.207.198.249
 
-[qa]
-qa1 ansible_host=54.225.7.19
+[testing]
+test1 ansible_host=54.225.7.19
 
-[first]
-dev1
-qa1
-
-[groupofgroups:children]
-dev
-first
-
-[devsubset]
-dev[1:2]
